--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,30 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tarjeta de crédito válida</title>
+    <meta name="viewport" content="width=device-width"/>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,300&display=swap" rel="stylesheet">
+    <title>Validation</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header> 
+      <img src="src/img/Jaibatronix.png" id="logo"/>
+    </header>
+    <main>
+      <div class="subtitle" style="border:2px solid rgb(0,0,0)" >
+        <h1>Validación de tarjeta</h1>
+        </div><br>
+      <div class="textarea"  style="border:2px solid rgb(0,0,0)" >
+      <h3>Ingrese los 16 dígitos de su tarjeta</h3>
+      <input type="text" name="cardNumber" id="cardNumber" value="a"/></br>
+      <button type="submit" id="validator"> Validar </button>
+      </div>
+    </main>
+    <footer>
+      <div class="footer" style="border:2px solid rgb(0,0,0)" >
+        <h
+      </div>
+    </footer>
     <script src="index.js" type="module"></script>
   </body>
 </html>
